--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
   </header>
   <section class="about">
+    <canvas class="orb-canvas" id="orb-canvas"></canvas>
     <div class="about__info animate__animated animate__fadeInLeft animate__slow">
         <h1>Солнечные панели GreenRobotic</h1>
         <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
@@ -23,7 +24,7 @@
     <div class="about__images animate__animated animate__fadeInRight animate__slow">
         <img class="about__sun-image" src="img/sun.png">
         <img class="about__image" src="img/solar-panel.png">
-    </div>
+    </div>S
     <section class="form">
         <div class="form__containter">
             <h1>Оставьте свои контакты</h1>
@@ -184,5 +185,6 @@
         GreenCorp © 2021
     </div>
  </footer>
+ <script src="js/canvas.js"></script>
 </body>
 </html>
